--- a/Hash/Hash.vcxproj.filters
+++ b/Hash/Hash.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="전화번호 목록.cpp">
       <Filter>소스 파일\프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="위장.cpp">
+      <Filter>소스 파일\프로그래머스</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
