--- a/Hash/Hash.vcxproj.filters
+++ b/Hash/Hash.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="위장.cpp">
       <Filter>소스 파일\프로그래머스</Filter>
     </ClCompile>
+    <ClCompile Include="베스트앨범.cpp">
+      <Filter>소스 파일\프로그래머스</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
